# auto_apms_studio

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  compose.yaml  package-lock.json  package.json  package.xml
.github/workflows/: ci.yml  ci_backend.yml  ci_frontend.yml  docker.yml
auto_apms_studio/backend/: README.md  pyproject.toml
auto_apms_studio/backend/app/: main.py
auto_apms_studio/backend/app/adapters/: autoapms.py  cpp_nodes.py  ros_bridge.py  ros_node.py
auto_apms_studio/backend/app/models/: nodes.py
auto_apms_studio/backend/app/routers/: __init__.py  executors.py  health.py  manifests.py  mission.py  nodes.py  status.py  upload.py
auto_apms_studio/backend/tests/: conftest.py  test_autoapms.py  test_cpp_nodes.py  test_health_router.py  test_mission_router.py  test_nodes_router.py  test_ros_bridge.py  test_ros_node.py  test_status_router.py  test_upload_router.py
docker/: custom.sh
docs/: index.md
docs/.vitepress/: config.mjs
docs/.vitepress/theme/: custom.css
docs/dev-guide/: architecture.md  introduction.md  structure.md
docs/dev-guide/api/: rest.md  websocket.md
docs/dev-guide/contributing/: contributing.md  dev-setup.md  guidelines.md
docs/dev-guide/guides/: groot2-migration.md  importing-node-models.md
docs/user-guide/concepts/: core-concepts.md  workflows.md
docs/user-guide/introduction/: getting-started.md  installation.md  introduction.md
docs/user-guide/reference/: troubleshooting.md  xml-format.md
launch/: studio_launch.py
scripts/: start_backend  start_web
web/: Dockerfile  eslint.config.js  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  vite.config.js
web/public/: node_models.json
web/src/: App.css  App.jsx
web/src/components/: CustomDropdown.jsx  ErrorAlert.jsx  JsonToXmlConverter.jsx  Tooltip.jsx  XmlToJsonConverter.jsx
web/src/context/: DragDropContext.jsx  NodeContext.jsx
web/src/features/settings/: Settings.jsx  constants.js
web/src/features/settings/components/: ThemeSection.jsx  WorkspaceSection.jsx
web/src/features/sidebar/: Sidebar.jsx  constants.js
web/src/features/sidebar/components/: ContextMenu.jsx  ExpandableList.jsx  ModeSwitcher.jsx  SearchInput.jsx  SectionHeader.jsx  SidebarFooter.jsx  SidebarHeader.jsx
web/src/features/sidebar/hooks/: useFetchNodes.js  useNodeFilter.js  useTreeExport.js  useTreeRefactor.js
web/src/features/sidebar/utils/: searchUtils.js  treeRefactorUtils.js
web/src/features/workspace/: EmptyWorkspaceModal.jsx  FlowCanvas.jsx  WorkSurface.jsx
web/src/features/workspace/hooks/: useAttributeChange.js  useConnectionNodeList.js  useCopyPaste.js  useLayerManagement.js  useNodeIdGenerator.js  useNodeInitialization.js  useNodeOperations.js  useNodesDelete.js  usePortChange.js  usePortRemap.js  useSubtreeOperations.js  useTreeChange.js  useTreeLayout.js  useTreeState.js  useWorkspaceRehydration.js
web/src/features/workspace/services/: layoutService.js  treeService.js
web/src/features/workspace/utils/: collisionUtils.js  layoutUtils.js  nodeHelpers.js  subtreeUtils.js
web/src/hooks/: useContextMenu.js  useKeyboardShortcuts.js
web/src/services/: downloadService.js  flowToTreeConverter.js  irToFlowConverter.js  jsonService.js  treeService.js  treeToIrConverter.js  xmlService.js
web/src/store/: treeStore.js  workspaceStore.js
web/src/tests/global/hooks/: useContextMenu.test.js  useKeyboardShortcuts.test.js
web/src/tests/global/store/: treeStore.test.js  workspaceStore.test.js
web/src/tests/global/utils/: treeDependencyUtils.test.js
web/src/tests/samples/: sample.json  sample.xml
web/src/utils/: treeDependencyUtils.js
(+77 files in other folders)
