[project]
name = "AutoAPMS_Backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.122.0",
    "mypy>=1.18.2",
    "ruff>=0.14.6",
    "uvicorn>=0.38.0",
    "pydantic>=2.12.0",
    "argcomplete",
    "PyYAML",
    "jinja2",
    "typeguard",
    "pytest",
    "defusedxml"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
ignore_missing_imports = true
strict = true